--- a/src/blocks/modules/content/content.scss
+++ b/src/blocks/modules/content/content.scss
@@ -84,7 +84,7 @@
 
     // .content__cards-item
 
-    &__cards-item {
+    &__card {
         height: 150px;
         background-color: $light-gray;
         &:nth-child(odd) {
