--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -7,20 +7,20 @@
 }
 
 .wrapper {
-    max-width: $container + 15px * 2;
-    padding: 0 15px;
+    max-width: $container + $gap * 2;
+    padding: 0 $gap;
     margin: 0 auto;
     grid-row-gap: 22px;
     grid-column-gap: 20px;
     grid-template-columns: 184px auto;
-    grid-template-areas: 
+    grid-template-areas:
         'header header'
         'aside content'
         'footer footer';
-    @media(max-width: 767px) {
-        grid-template-areas: 
-        'header header'
-        'content content'
-        'footer footer';
+    @media (max-width: 767px) {
+        grid-template-areas:
+            'header header'
+            'content content'
+            'footer footer';
     }
 }
